Oppgave 1 og 2 OK

--- a/Oblig2.vcxproj.filters
+++ b/Oblig2.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="Oblig2.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Module.ixx">
+      <Filter>Header Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
